--- a/frontend/app/views/authors.html
+++ b/frontend/app/views/authors.html
@@ -1,7 +1,7 @@
 
 <div layout="column" class="authors-list">
    <md-list class="compact-list">
-      <md-subheader class='topic margin'>{{'AUTHORS'|translate}}</md-subheader>
+      <md-subheader class='topic margin' translate="AUTHORS"></md-subheader>
       <div ng-show="loading" class="loading">
          <p><i class="fa fa-refresh"></i><span>{{'LOADING'|translate}}...</span></p>
       </div>
@@ -9,7 +9,7 @@
          <md-button ui-sref="author({id: author.id})">
             <h4>{{author.name}}</h4>
          </md-button>
-         <span class="info">{{'CONTRIBUTED_TO'|translate}} {{author.plugin_count}} plugins</span class="info">
+         <span class="info" translate="CONTRIBUTED_TO" translate-value-plugincount="{{author.plugin_count}}"></span class="info">
       </md-list-item>
    </md-list>
    <pagination ng-hide="loading" collection="authors"></pagination>
