--- a/frontend/app/views/linkaccount.html
+++ b/frontend/app/views/linkaccount.html
@@ -1,7 +1,7 @@
 <md-dialog class="dialog">
    <md-toolbar>
       <div class="md-toolbar-tools">
-         <h2>Link an external social account</h2>
+         <h2 translate="LINKACCOUNT_AN_EXTERNAL_SOCIAL_ACCOUNT"></h2>
          <span flex></span>
          <md-button class="md-icon-button" ng-click="close()">
            <i class="fa fa-times"></i>
@@ -9,19 +9,19 @@
       </div>
    </md-toolbar>
    <div class="link-new-account">
-      <h2>Link a new account</h2>
+      <h2 translate="LINKACCOUNT_LINK_A_NEW_ACCOUNT"></h2>
       <md-button ng-click="connect('github')"><i class="fa fa-github social-icon"></i></md-button>
 <!--       <md-button ng-click="connect('google')"><i class="fa fa-google social-icon"></i></md-button>
       <md-button ng-click="connect('facebook')"><i class="fa fa-facebook social-icon"></i></md-button>
       <md-button ng-click="connect('twitter')"><i class="fa fa-twitter social-icon"></i></md-button> -->
    </div>
    <div class="current-accounts">
-      <h2>Your external accounts</h2>
+      <h2 translate="LINKACCOUNT_EXTERNAL_ACCOUNTS"></h2>
       <md-list>
          <md-list-item class="list-header">
-            <p>Service</p>
-            <p>User #ID</p>
-            <p>Unlink</p>
+            <p translate="LINKACCOUNT_SERVICE"></p>
+            <p translate="LINKACCOUNT_USERID"></p>
+            <p translate="LINKACCOUNT_UNLINK"></p>
          </md-list-item>
 
          <md-list-item ng-repeat="account in external_accounts">
