--- a/frontend/app/views/notifications.html
+++ b/frontend/app/views/notifications.html
@@ -1,19 +1,19 @@
 <div layout="row" id="notifications">
    <div flex="100">
-      <h2>Plugins watched</h2>
+      <h2 translate="NOTIFICATIONS_PLUGINS_WATCHED"></h2>
 
-      <h3 ng-show="plugins_watched.length == 0">You're currently not watching any plugin</h3>
+      <h3 ng-show="plugins_watched.length == 0" translate="NOTIFICATIONS_YOURE_NOT_WATCHING_ANY_PLUGINS"></h3>
       <div ng-show="plugins_watched.length != 0">
-         <h3>You'll receive notifications on update</h3>
+         <h3 translate="NOTIFICATIONS_YOULL_RECEIVE_NOTIFICATIONS_ON_UPDATE"></h3>
          <md-list class="notifications-list">
             <md-list-item ng-repeat="plugin in plugins_watched">
-               <p>{{plugin}}</p> <md-button class="md-raised" ng-click="unwatch(plugin)"><h4>unwatch</h4></md-button>
+               <p>{{plugin}}</p> <md-button class="md-raised" ng-click="unwatch(plugin)"><h4 translate="NOTIFICATIONS_UNWATCH"></h4></md-button>
             </md-list-item>
          </md-list>
       </div>
 
-      <p>You can also discover new plugins and subscribe to notifications from the plugin pages</p>
-      <p>Please check those trending plugins :</p>
+      <p translate="NOTIFICATIONS_DISCOVER_AND_SUBSCRIBE"></p>
+      <p translate="NOTIFICATIONS_PLEASE_CHECK_THOSE_TRENDING_PLUGINS"></p>
 
       <md-list>
          <md-list-item ng-repeat="plugin in trending">
