--- a/frontend/app/views/viewapikey.html
+++ b/frontend/app/views/viewapikey.html
@@ -1,7 +1,7 @@
 <md-dialog class="dialog view-apikey-modal">
    <md-toolbar>
       <div class="md-toolbar-tools">
-         <h2>View Client Credentials</h2>
+         <h2 translate="VIEWAPIKEY_PAGE_TITLE"></h2>
          <span flex></span>
          <md-button class="md-icon-button" ng-click="close()">
            <i class="fa fa-times"></i>
@@ -10,15 +10,15 @@
    </md-toolbar>
 
    <div class="settings">
-      <h2>Client Credentials</h2>
+      <h2 translate="VIEWAPIKEY_CLIENT_CREDENTIALS"></h2>
       <form ng-submit="updateSettings()">
          <md-input-container>
-            <label>Client ID</label>
+            <label translate="VIEWAPIKEY_CLIENT_ID"></label>
             <input type="text" ng-model="app.id" disabled>
          </md-input-container>
 
          <md-input-container>
-            <label>Client Secret</label>
+            <label translate="VIEWAPIKEY_CLIENT_SECRET"></label>
             <input type="text" ng-model="app.secret" disabled>
          </md-input-container>
       </form>
